# FrJoCo

./: .gitignore  requirements.txt
C++/: CMakeLists.txt  README.md  build.sh  main.cpp  main_push_test.cpp  run.sh
C++/include/: config.hpp
C++/include/constraints/: constraint_core.hpp  convex_hull.hpp  cop_limits.hpp  friction_cone.hpp  task_space.hpp
C++/include/controller/: LIPM_LQR.hpp  LIPM_MPC.hpp
C++/include/dynamics_model/: LIPM.hpp  com_dynamics.hpp
C++/include/main_controller/: g1_walking_controller.hpp
C++/include/trajectory_planner/: dcm_trajectory.hpp  foot_trajectory.hpp  zmp_trajectory.hpp
C++/include/utils/: math_utils.hpp
C++/include/whole_body_controller/: DBFC_core.hpp  Force_Optimizer.hpp  whole_body_ik.hpp  whole_body_torque.hpp
C++/include/whole_body_controller/tasks/: Task_core.hpp  Walking_Task.hpp  balance_task.hpp
C++/src/constraints/: convex_hull.cpp  cop_limits.cpp  friction_cone.cpp  task_space.cpp
C++/src/controller/: LIPM_LQR.cpp  LIPM_MPC.cpp
C++/src/dynamics_model/: LIPM.cpp  com_dynamics.cpp
C++/src/main_controller/: g1_walking_controller.cpp
C++/src/trajectory_planner/: dcm_trajectory.cpp  foot_trajectory.cpp  zmp_trajectory.cpp
C++/src/whole_body_controller/: DBFC_core.cpp  Force_Optimizer.cpp  whole_body_ik.cpp  whole_body_torque.cpp
C++/src/whole_body_controller/tasks/: balance_task.cpp
model/urdf/: g1_29dof.urdf
model/xml/: g1_29dof.xml
python/DCM/: Layer2.py  Layer3.py  Layer3_dynamics_wbc.py  README.md  config.py  g1_wbc_dynamics_mink.py
python/DCM_v2/: Layer1.py  Layer3.py  README.md  config.py  g1_kinematic.py  g1_traj_viewer.py  g1_wbc_dynamics_qp.py
python/DCM_v2/image/: test_perturbation.py
python/SRBD/: Layer2_MPC.py  Layer2_SRBD_MPC.py  srbd_mpc_dynamics.py  utilis.py
python/SRBD/test/: Layer1_DCM.py  Layer3_dynamics_wbc.py  MUJOCO_LOG.TXT  config.py  g1_wbc_dynamics.py  (+2 more)
python/ZMP/: config.py  g1_zmp_based.py
python/ZMP_v2/: config.py  kinematic_wbc.py  play.py  play_realtime.py  play_sim.py  trajectory_planner.py
python/g1_dcm_wbc/: Layer1.py  Layer3.py  config.py
python/new_ZMP/: Layer1.py  Layer2.py  Layer3.py  config.py  play copy.py  play.py  play_kinematic.py
python/new_ZMP_v2/: Layer1.py  Layer2.py  Layer3_qp.py  config.py  play.py  play_wbc.py
(+9 files in other folders)
